--- a/basics-01-starting-project/index.html
+++ b/basics-01-starting-project/index.html
@@ -31,8 +31,10 @@
       <h2>Result: <span id="current-result">0</span></h2>
     </section>
 
+    
 
 
+    <script src="assets/scripts/vendor.js" ></script>
     <script src="assets/scripts/app.js" defer></script>
   </body>
 </html>
